# rs-change-detection

./: .env.example  .gitignore  CITATION.cff  LICENSE  PUBLISHING.md  PYPI_README.md  README.md  detect.py  gee_utils.py  indices.py  make_map.py  mapmaker.py  mpc_backend.py  pyproject.toml  requirements.txt  run_all.py  scenarios.py  sites.py
.github/workflows/: docs.yml  publish.yml
data/: README.md
data-collection/: 01_sentinel2_download.py  02_sirad_gee.js  02_sirad_gee.py  03_ndvi_change_gee.py  03_planetscope_ndvi.py  04_legal_verification.md
docs/: index.html
docs/api/: index.html  satchange.html  search.js
docs/api/satchange/: detect.html  gee_utils.html  indices.html  make_map.html  mapmaker.html  mpc_backend.html  scenarios.html  sites.html
examples/: urban_history.py
narration/: capkala_narration_v4.txt
satchange/: __init__.py  coastline.py  detect.py  gee_utils.py  indices.py  make_map.py  mapmaker.py  mpc_backend.py  planet_backend.py  scenarios.py  transit.py  urban_history.py
scripts/: 01_generate_tts.py  02_assemble_video.py  02_assemble_video.sh
